--- a/rel/GSW values/TODO.txt
+++ b/rel/GSW values/TODO.txt
@@ -13,11 +13,12 @@ Find workaround for skipping gloomtail
 finish gor_03 speach hooks
 1 time shop purchases
 Set GSWF(2231) in jin_08_init_evt
+sun and moon stone pillars ch.1
 
 //Medium Prio
 hot dog saying no
 decide on final yaml options for release
-test epilogue and test ch.8 starting
+test epilogue
 Test bobbery check
 
 //Low Prio
