Properly init party on new save

--- a/rel/GSW values/TODO.txt
+++ b/rel/GSW values/TODO.txt
@@ -8,6 +8,7 @@ Madam crash rsh/pik
 Finish assembly GSW(0) replacements
 finish gor_03 speach hooks
 1 time shop purchases
+Scale item prices
 
 //Medium Prio
 hot dog saying no
