--- a/rel/GSW values/TODO.txt
+++ b/rel/GSW values/TODO.txt
@@ -10,11 +10,10 @@ Scale item prices
 
 //Medium Prio
 hot dog saying no
-decide on final yaml options for release
+Add more yaml options
 test epilogue
 Test bobbery check
 
 //Low Prio
 reset music on warp
 Tabulate macros
-rival init mri_01
