Fix intermission issues

--- a/rel/GSW values/TODO.txt
+++ b/rel/GSW values/TODO.txt
@@ -1,8 +1,9 @@
 //High Prio
 Red/Blue Keys
+Up Arrow
+Coconut
 
 //Medium Prio
-Fix saving
 Add more yaml options
 test epilogue
 Test bobbery check
@@ -12,3 +13,4 @@ Finish assembly GSW(0) replacements
 reset music on warp
 Tabulate macros
 finish gor_03 speach hooks
+fix flavio -1000
