More misc fixes

--- a/rel/GSW values/TODO.txt
+++ b/rel/GSW values/TODO.txt
@@ -2,6 +2,7 @@
 Red/Blue Keys
 Up Arrow
 Coconut
+Hooktail castle shine sprite
 
 //Medium Prio
 Add more yaml options
@@ -14,3 +15,4 @@ reset music on warp
 Tabulate macros
 finish gor_03 speach hooks
 fix flavio -1000
+Train passengers
