--- a/rel/GSW values/TODO.txt
+++ b/rel/GSW values/TODO.txt
@@ -2,10 +2,15 @@
 Red/Blue Keys
 Up Arrow
 Coconut
+save assembly
+moon epilogue
+gor_00 epilogue
+flurrie
+train state
+riverside elevator
 
 //Medium Prio
 Add more yaml options
-test epilogue
 Test bobbery check
 Finish assembly GSW(0) replacements
 
