Flavio fixes + Minor changes and optimizations

--- a/rel/GSW values/TODO.txt
+++ b/rel/GSW values/TODO.txt
@@ -2,6 +2,12 @@
 Red/Blue Keys
 moon epilogue
 Ch.7 intermission
+Ch.2 intermission
+invisible brick blocks
+twilight town logic
+ch.1 ultra hammer blocks
+ch.1 koops dad letter
+goldbob guide
 
 //Medium Prio
 Add more yaml options
