--- a/rel/GSW values/TODO.txt
+++ b/rel/GSW values/TODO.txt
@@ -1,18 +1,9 @@
 //High Prio
-Red/Blue Keys
-moon epilogue
-Ch.7 intermission
-Ch.2 intermission
-invisible brick blocks
-twilight town logic
-ch.1 ultra hammer blocks
-ch.1 koops dad letter
-goldbob guide
 
 //Medium Prio
 Add more yaml options
-Finish assembly GSW(0) replacements
 
 //Low Prio
 reset music on warp
+Revisit some GSW(0) assembly references
 finish gor_03 speach hooks
