--- a/rel/misc/TODO.txt
+++ b/rel/misc/TODO.txt
@@ -4,6 +4,10 @@
 Add more yaml options
 
 //Low Prio
-reset music on warp
 Revisit some GSW(0) assembly references
 finish gor_03 speach hooks
+
+Station Key Check permanence
+Missable Tattle items if beaten before goombella
+Bobbery Cannon
+Ch.7 progress regression
