--- a/rel/misc/TODO.txt
+++ b/rel/misc/TODO.txt
@@ -7,7 +7,11 @@ Add more yaml options
 Revisit some GSW(0) assembly references
 finish gor_03 speach hooks
 
+
 Station Key Check permanence
 Missable Tattle items if beaten before goombella
 Bobbery Cannon
 Ch.7 progress regression
+Ingame keys rename
+Shop item prices rework
+Add jolene to ch.3 bribes
