--- a/rel/misc/TODO.txt
+++ b/rel/misc/TODO.txt
@@ -9,7 +9,7 @@ finish gor_03 speach hooks
 
 
 Station Key Check permanence
-Missable Tattle items if beaten before goombella
+Missable Tattle items if beaten before goombella is acquired
 Bobbery Cannon
 Ch.7 progress regression
 Ingame keys rename
