--- a/rel/misc/TODO.txt
+++ b/rel/misc/TODO.txt
@@ -15,4 +15,4 @@ Ch.7 progress regression
 Ingame keys rename
 Shop item prices rework
 Add jolene to ch.3 bribes
-Shadow Queen Cutscene Skip
+Cannon cutscene
